# HotelsSearchBot

./: .env.template  dump_london.json  hotels-search.db  loader.py  main.py  pyproject.toml  requirements.txt  temp.json
config_data/: config.py
database/: __init__.py  db_actions.py  hotels-search.db  models.py
filters/: __init__.py  callback_filters.py  custom_callback_filters.py
handlers/: __init__.py  callbacks.py  hello_world.py  help.py  undefined.py
handlers/custom_handlers/: __init__.py  bestdeal.py  callbacks.py  guest_rating.py  history.py  hotels_search_core.py  lowprice.py
handlers/default_handlers/: __init__.py  help.py  start.py
keyboards/inline/: __init__.py  calendar_markup.py  cities_keyboard_markup.py  currency_markup.py  destinations_markup.py  history_keyboard.py  how_are_you.py  photos_confirmation_markup.py  query_confirmation_markup.py
rapid_api/: __init__.py  api_requests.py
states/: __init__.py  user_states.py
utils/: __init__.py  set_bot_commands.py  set_filters.py
utils/misc/: __init__.py  ask_for_confirmation.py  confirmation_text.py  destination_names.py  get_language.py  history_text.py  locale_code.py  locations_names.py
