[tool.poetry]
name = "hotels-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.3"
lingua-language-detector = "^1.3.2"
python-dotenv = "^1.0.0"
telebot-calendar = "^1.2"
pytelegrambotapi = "^4.13.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
